--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,6 @@
         <title>Simple Backbone Pagination Example</title>
     </head>
     <body>
-        <div id="users">
-        </div>
+        <div id="users"> </div>
     </body>
 </html>
